--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/main_txt"/>
+        android:id="@+id/main_txt"
+        android:text="http://goo.gl/T2M9dQ" />
 
     <TextView
         android:layout_width="wrap_content"
